tests/scripts/parse_errors/escape_error.roto
fn foo() {
	let x = "blabla\y";
}
